--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,35 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
+  build:
     docker:
-      # Specify the version you desire here
-      # See: https://circleci.com/developer/images/image/cimg/base
-      - image: cimg/base:current
-
-    # Add steps to the job
-    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
+      - image: circleci/node:14
     steps:
-      # Checkout the code as the first step.
       - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+      - run: echo "Building the project"
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
+  run-with-prompt:
+    docker:
+      - image: circleci/node:14
+    parameters:
+      user_choice:
+        type: boolean
+        default: false
+    steps:
+      - run:
+          name: Check user input and call endpoint
+          command: |
+            if [[ << parameters.user_choice >> == "true" ]]; then
+              curl -X POST "https://your-endpoint.com/trigger"
+              echo "Endpoint called."
+            else
+              echo "Skipping endpoint call."
+            fi
+
 workflows:
-  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  version: 2
+  run-build:
     jobs:
-      - say-hello
+      - build
+      - run-with-prompt:
+          user_choice: << pipeline.parameters.run_endpoint >>
