--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,11 @@ workflows:
       - build
       - approve-step:
           type: approval
-          name: "Approval Required: Review Information"
+          description: |
+            Please review the following before proceeding:
+            - Ensure all prerequisites are met.
+            - Be aware of any external dependencies.
+            - Consult with the team if you are unsure about proceeding.
           requires:
             - build
       - continue-workflow:
